# microsoft-graph-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: code-review.md  implement.md
.claude/commands/plan/: plan.md
project-docs/: plan.md  tasks.json
src/: config.rs  main.rs
src/auth/: device_code.rs  mod.rs  token_store.rs
src/commands/: auth.rs  mail.rs
src/graph/: client.rs  mail.rs
