[package]
name = "msgraph"
version = "0.1.0"
edition = "2021"
description = "Microsoft Graph API CLI for AI agents"

[[bin]]
name = "msgraph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
